force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApprovalStatus__c</fullName>
    <label>ApprovalStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>