force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__BaselineMilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineMilestoneDate__c</fullName>
    <label>Baseline Milestone Date</label>
    <type>Date</type>
</CustomField>