force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__BaselineMilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineMilestoneValue__c</fullName>
    <label>Baseline Milestone Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>