force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__CostMilestone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Milestone</label>
    <referenceTo>KimbleOne__CostMilestone__c</referenceTo>
    <relationshipLabel>Milestone</relationshipLabel>
    <relationshipName>Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>