force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__DeliveryElementInvoicedWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElementInvoicedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoiced With</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Milestones (Invoiced With)</relationshipLabel>
    <relationshipName>MilestonesInvoicedWith</relationshipName>
    <type>Lookup</type>
</CustomField>