force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__Event__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>KimbleOne__Event__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>