force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__ExternalMilestoneId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExternalMilestoneId__c</fullName>
    <label>ExternalMilestoneId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>