force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__HasCostExchangeRateImpact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasCostExchangeRateImpact__c</fullName>
    <formula>TEXT(CurrencyIsoCode) != KimbleOne__SupplierInvoicingCurrencyIsoCode__c</formula>
    <label>Has Cost Exchange Rate Impact</label>
    <type>Checkbox</type>
</CustomField>