force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__InternalInvoicingCurrencyMilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalInvoicingCurrencyMilestoneValue__c</fullName>
    <label>Internal InvoicingCcy Milestone Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>