force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__InternalInvoicingCurrencyUnitValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalInvoicingCurrencyUnitValue__c</fullName>
    <label>Internal Invoicing Ccy Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>