force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__InternalMilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalMilestoneValue__c</fullName>
    <label>Internal Milestone Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>