force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__InternalUnitValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalUnitValue__c</fullName>
    <label>Internal Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>