force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__InvoicingCurrencyMilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyMilestoneValue__c</fullName>
    <label>Invoicing Currency Milestone Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>