force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__InvoicingCurrencyUnitValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyUnitValue__c</fullName>
    <label>Invoicing Currency Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>