force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__MilestonePercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestonePercentage__c</fullName>
    <label>Milestone Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>