force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__MilestoneTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Template</label>
    <referenceTo>KimbleOne__MilestoneTemplate__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>