force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__MilestoneType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>MilestoneType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Milestone</relationshipLabel>
    <relationshipName>Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>