force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__MilestoneUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneUnits__c</fullName>
    <label>Units</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>