force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__Narrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Narrative__c</fullName>
    <label>Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>