force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__RevenueMilestone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Milestone</label>
    <referenceTo>KimbleOne__RevenueMilestone__c</referenceTo>
    <relationshipLabel>Milestone</relationshipLabel>
    <relationshipName>Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>