force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__SupplierInvoicingCurrencyMilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoicingCurrencyMilestoneValue__c</fullName>
    <label>Supplier Invoicing Ccy Milestone Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>