force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__SupplierInvoicingCurrencyUnitValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoicingCurrencyUnitValue__c</fullName>
    <label>Supplier Invoicing Ccy Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>