force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__TemporalCostExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalCostExchangeRate__c</fullName>
    <label>Temporal Cost Exchange Rate</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>