force-app/main/default/objects/KimbleOne__Milestone__c/fields/KimbleOne__TemporalRevenueExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalRevenueExchangeRate__c</fullName>
    <label>Temporal Revenue Exchange Rate</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>