force-app/main/default/objects/KimbleOne__Milestone__c/validationRules/KimbleOne__InvoicedWithMandatoryForRevenueMilestone.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__InvoicedWithMandatoryForRevenueMilestone</fullName>
    <active>true</active>
    <description>Invoiced With is mandatory if Milestone Type is Revenue</description>
    <errorConditionFormula>ISBLANK(KimbleOne__DeliveryElementInvoicedWith__c) &amp;&amp;  KimbleOne__MilestoneType__r.KimbleOne__Enum__c = &apos;Revenue&apos;</errorConditionFormula>
    <errorMessage>Invoiced With Element must be specified for Revenue Milestone</errorMessage>
</ValidationRule>