force-app/main/default/objects/KimbleOne__Milestone__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__CostMilestone__c</columns>
    <columns>KimbleOne__DeliveryElement__c</columns>
    <columns>KimbleOne__ForecastingTimePeriod__c</columns>
    <columns>KimbleOne__ApprovalStatus__c</columns>
    <columns>KimbleOne__MilestoneDate__c</columns>
    <columns>KimbleOne__MilestoneType__c</columns>
    <columns>KimbleOne__BaselineMilestoneValue__c</columns>
    <columns>KimbleOne__MilestoneValue__c</columns>
    <columns>KimbleOne__RevenueMilestone__c</columns>
    <columns>KimbleOne__SupplierInvoicingCurrencyMilestoneValue__c</columns>
    <columns>KimbleOne__UnitValue__c</columns>
    <columns>KimbleOne__MilestoneUnits__c</columns>
    <columns>KimbleOne__MilestoneStatus__c</columns>
    <columns>KimbleOne__InvoiceItemStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>